--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@
 /test/dummy/log/*.log
 /test/dummy/storage/
 /test/dummy/tmp/
+/test/dummy/db/schema.rb
+/test/dummy/db/*structure.sql
 .vscode
 /vendor
